--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,13 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+    </style>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
